Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerNumObj.quorum
class Main
    action Main
        Number n
        integer int
        num:SetValue(7.5)
        int = cast(integer, n)
        if int = 7
            output "passed"
        end
    end
end