Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjNumObj.quorum
class main
    action Main
        Number n
        Text txt
        n:SetValue(7.5)
        txt = cast(Text, n)
    end
end